<?xml version="1.0"?>
<package>
  <name>ros_tutorials_topic</name>
  <version>0.1.0</version>
  <description>ROS tutorial package to learn rhe topic</description>
  <author email="qhrqufdlek@naver.com">luckydipper</author>
  <maintainer email="luckydipper@todo.todo">luckydipper</maintainer>
  <license>Aparche License2.0</license>
  <maintainer email="qhrqufdlek@naver.com">luckydipper</maintainer>
  <url type="bugtracker">https://github.com/luckydipper/roboticsStudy</url>
  <url type="repository">https://github.com/luckydipper/roboticsStudy</url>
  <url type="website">luckydipper.github.io/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export></export>
</package>
